tests/NormalTests/paczka1/fuzzy1/31418146.err
Error in line 24: ZMWFZO A752 4,6
Error in line 29: A75) A36 58,9
Error in line 28: ZMWFZO A41 46,3
Error in line 30: ZMWFZO A36 46,2
Error in line 31: ZMWFZO A752 30,6
